[project]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[standard]>=0.136.1,<0.137.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10.0.0",
    "pytest-cov>=7.1.0,<8.0.0",
    "taskipy>=1.14.1,<2.0.0",
    "ruff>=0.15.12,<0.16.0",
    "typos>=1.45.1,<2.0.0"
]

[tool.ruff]
line-length = 79
extend-exclude = [
    "migrations",
    "htmlcov",
    ".pytest_cache",
    "__pycache__",
]

[tool.ruff.lint]
preview = true
select = ["I", "F", "E", "W", "PL", "PT"]

[tool.ruff.format]
preview = true
quote-style = "single"

[tool.typos.files]
extend-exclude = [
    "htmlcov",
    ".coverage",
    ".pytest_cache",
    "__pycache__",
]

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"

[tool.taskipy.tasks]
pre_lint = "typos"
lint = "ruff check"
pre_format = "ruff check --fix"
format = "ruff format"
run = "fastapi dev fast_zero/app.py"
pre_test = "task lint"
test = "pytest -s -x --cov=fast_zero -vv"
post_test = "coverage html"
